@@ -24,6 +24,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <iostream>
 #include <cstdio>
 #include <cstring>
+#include <string>
 
 #include "exult_types.h"
 
